# hiveguard-security-core

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
docs/: ARCHITECTURE.md
examples/: echo_agent.py  monitor_agent.py
framework/: __init__.py
framework/agents/: base_agent.py
framework/lifecycle/: __init__.py  states.py
framework/security/: __init__.py  enforcement.py  invariants.py
framework/types/: __init__.py
tests/: conftest.py  test_base_agent.py  test_echo_agent.py  test_enforcement.py  test_invariants.py  test_lifecycle.py  test_monitor_agent.py  test_types.py
